--- a/control
+++ b/control
@@ -1,8 +1,8 @@
 Package: com.itsjafer.bigpipenergy
 Name: BigPiPEnergy
-Depends: mobilesubstrate
+Depends: mobilesubstrate, ws.hbang.common (>= 1.11)
 Version: 0.0.1
-Architecture: iphoneos-arm, ws.hbang.common (>= 1.11)
+Architecture: iphoneos-arm
 Description: Removes the max size on Picture in Picture.
 Maintainer: itsjafer <itsjafer@gmail.com>
 Author: itsjafer <itsjafer@gmail.com>
